--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ clap = { version = "4.5.4", features = ["derive"] }
 colored = "2.1.0"
 serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
+atty = "0.2.14"
