--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ colored = "2.1.0"
 serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 atty = "0.2.14"
+shellexpand = "3.1.0"
