--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hbox"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
 description = "CLI tool that leverages container technology to manage packages."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
