--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 atty = "0.2.14"
 shellexpand = "3.1.0"
+log = "0.4.21"
+env_logger = "0.11.3"
+chrono = "0.4.38"
