--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ log = "0.4.21"
 serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 shellexpand = "3.1.0"
+rand = "0.8.5"
